Created addons.xml as zipped

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=https://fbacher.github.io/repository.fbacher/README_INSTALL.md" />
+    <meta http-equiv="refresh" content="0; url=https://fbacher.github.io/repository.fbacher/README_INSTALL" />
 </head>
 <body>
 
